2002-10-21  Darin Adler  <darin@apple.com>

        * WebCoreSupport.subproj/WebViewFactory.h: Changed to use new protocol scheme so we
	get an error if we forget to implement something.
        * WebCoreSupport.subproj/WebViewFactory.m:
        (-[WebViewFactory runJavaScriptTextInputPanelWithPrompt:defaultText:returningText:]): Stub.

2002-10-21  Richard Williamson   <rjw@apple.com>

        More incremental tweaks.  Will be factoring common
        handle delegate behavior into base class.
        
        * Plugins.subproj/WebNetscapePluginStream.m:
        (-[WebNetscapePluginStream handle:didReceiveData:]):
        (-[WebNetscapePluginStream handleDidFinishLoading:]):
        * WebCoreSupport.subproj/WebBridge.m:
        (-[WebBridge objectLoadedFromCache:response:size:]):
        * WebCoreSupport.subproj/WebSubresourceClient.m:
        (+[WebSubresourceClient startLoadingResource:withURL:referrer:forDataSource:]):
        (-[WebSubresourceClient handle:didReceiveData:]):
        (-[WebSubresourceClient handleDidFinishLoading:]):
        * WebView.subproj/WebControllerPrivate.h:
        * WebView.subproj/WebControllerPrivate.m:
        (-[WebController _finsishedLoadingResourceFromDataSource:]):

2002-10-21  Trey Matteson  trey@apple.com

	Fixed typos and other doc comment errors found during API review.

        * WebView.subproj/WebController.h:

2002-10-21  Richard Williamson   <rjw@apple.com>

        Changed WebResourceLoadDelegate methods to include an identifier
        as first parameter.  This will help clients track callbacks relating
        to a particular resource.  Added identifierForInitialRequest:fromDataSource:
        so clients can create their own identifier.
        
        * WebCoreSupport.subproj/WebBridge.m:
        (-[WebBridge objectLoadedFromCache:response:size:]):
        * WebCoreSupport.subproj/WebSubresourceClient.h:
        * WebCoreSupport.subproj/WebSubresourceClient.m: